--- a/wwwroot/css/IncomingOrder.css
+++ b/wwwroot/css/IncomingOrder.css
@@ -57,3 +57,10 @@
     color: white;
     border-radius: 5%;
 }
+
+.Edit {
+    text-decoration: none;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 5%;
+}
