Uppdaterad knapp i galleri
Uppdaterad knapp i galleri

--- a/Views/Model/OurModels.cshtml
+++ b/Views/Model/OurModels.cshtml
@@ -17,13 +17,14 @@
 <div class="OurModels">
     @foreach(var models in Model)
     {
-    <div class="hats">
-        <img src="@models.ImagePath" alt="Image of hat">
-        <div class="info">
-            <h2 class="ModelName">@models.ModelName</h2>
-            <a asp-action="ModelInfo" asp-controller="Model" asp-route-modelID="@models.ID" class="SeeProduct">See Product</a>
-        </div>
+         <div class="hats">
+            <img src="@models.ImagePath" alt="Image of hat">
+                 <div class="info">
+                    <h2 class="ModelName">@models.ModelName</h2>
+                      
+                    <a asp-action="ModelInfo" asp-controller="Model" asp-route-modelID="@models.ID" class="SeeProduct" style="background-color: cornflowerblue; border-radius: 10px;">See Product</a>
 
-    </div>
+                 </div>     
+         </div>
     }
 </div>
