--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
               <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="Order" asp-action="OrderHistory">Order history</a>
               </li>
+              <li class="nav-item">
+               <a class="nav-link text-dark" asp-controller="Account" asp-action="EditCustomer">Edit customer</a>
+               </li>
              
             </ul>
             <ul class="navbar-nav ml-auto">
