--- a/Views/Message/Topic.cshtml
+++ b/Views/Message/Topic.cshtml
@@ -15,7 +15,9 @@
               Posted @message.Posted.ToString("yyyy-MM-dd HH:mm") by @message.Sender.FirstName
               @message.Sender.LastName
             </div>
-            <div class="mt-3">@message.Content</div>
+            <div class="mt-3">
+              <pre style="font-family: var(--bs-font-sans-serif); font-size: 1rem; white-space: pre-wrap; word-wrap: break-word;">@message.Content</pre>
+            </div>
           </td>
         </tr>
       }
