--- a/Views/Message/Topic.cshtml
+++ b/Views/Message/Topic.cshtml
@@ -16,7 +16,8 @@
               @message.Sender.LastName
             </div>
             <div class="mt-3">
-              <pre style="font-family: var(--bs-font-sans-serif); font-size: 1rem; white-space: pre-wrap; word-wrap: break-word;">@message.Content</pre>
+              <pre
+                style="font-family: var(--bs-font-sans-serif); font-size: 1rem; white-space: pre-wrap; word-wrap: break-word;">@message.Content</pre>
             </div>
           </td>
         </tr>
