--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,15 +20,6 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-          @* <ul class="navbar-nav flex-grow-1">
-          <li class="nav-item">
-          <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
-          </li>
-          <li class="nav-item">
-          <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="SpecialOrderForm">Special
-          Order Form</a>
-          </li>
-          </ul> *@
 
           @if (user.IsAdmin())
           {
@@ -49,20 +40,26 @@
                 <a class="nav-link text-dark" asp-controller="Order" asp-action="OrderHistory">Order history</a>
               </li>
               <li class="nav-item">
-               <a class="nav-link text-dark" asp-controller="Account" asp-action="EditCustomer">Edit customer</a>
-              </li> 
-                <a class="nav-link text-dark" asp-controller="Admin" asp-action="AdminOrderCustomer">Order for customer</a>
+                <a class="nav-link text-dark" asp-controller="Account" asp-action="EditCustomer">Edit customer</a>
+              </li>
+              <li>
+                <a class="nav-link text-dark" asp-controller="Admin" asp-action="AdminOrderCustomer">Order for
+                  customer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="Admin" asp-action="AdminSpecialOrderCustomer">Special order for customer</a>
+                <a class="nav-link text-dark" asp-controller="Admin" asp-action="AdminSpecialOrderCustomer">Special order
+                  for customer</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="Account" asp-action="RegisterAdmin">Register admin</a>
+                <a class="nav-link text-dark" asp-controller="Account" asp-action="RegisterAdmin">Add employee</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
+                <a class="nav-link text-dark" asp-controller="Message" asp-action="Index">Messages</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Sign out</a>
               </li>
             </ul>
           }
@@ -88,12 +85,15 @@
                 </li>
               }
               else
-               {
-               <li class="nav-item">
-               <a class="nav-link text-dark" asp-controller="Account" asp-action="CustomerProfil">Customer Profile</a>
-               </li>
+              {
                 <li class="nav-item">
-                  <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
+                  <a class="nav-link text-dark" asp-controller="Message" asp-action="Index">Messages</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark" asp-controller="Account" asp-action="CustomerProfil">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Sign out</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">
