--- a/Views/Order/OrderHistory.cshtml
+++ b/Views/Order/OrderHistory.cshtml
@@ -32,6 +32,7 @@
                                 <th scope="col">Modelid</th>
                                 <th scope="col">Modelname</th>
                                 <th scope="col">Price</th>
+                                <th scope="col">Is Payed</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Customerid</th>
                                 <th scope="col">Customer Name</th>
@@ -61,6 +62,7 @@
                                             <td>@hats.Model.ID</td>
                                             <td>@hats.Model.ModelName</td>
                                             <td>@hats.Price</td>
+                                            <td>@order.PayStatus</td>
                                             <td>@order.Status</td>
                                             <td>@order.CustomerID</td>
 
