--- a/Views/Order/HandleOrder.cshtml
+++ b/Views/Order/HandleOrder.cshtml
@@ -48,7 +48,11 @@
                             <td>@hat.Size</td>
                             <td>@hat.Price</td>
                             <td><a asp-action="RemoveFromOrder" asp-controller="Order" asp-route-orderId="@Model.OrderId" asp-route-hatId="@hat.ID" class="Remove">Remove</a><br />
-                                <a asp-action="EditOrderHat" asp-controller="Order" asp-route-orderId="@Model.OrderId" asp-route-hatId="@hat.ID" class="Edit">Edit</a>
+                                @if(@hat.Model.ModelName.Equals("Specialhat"))
+                                {
+                                    <a asp-action="EditOrderHat" asp-controller="Order" asp-route-orderId="@Model.OrderId" asp-route-hatId="@hat.ID" class="Edit">Edit</a>
+                                }
+                                
                             </td>
                         </tr>
                     }
