--- a/Views/Order/HandleOrder.cshtml
+++ b/Views/Order/HandleOrder.cshtml
@@ -124,4 +124,4 @@
 
 
 
-<--<a asp-controller="Order" asp-action="ListOrders" class="SeeOrder">Return back </a>
+<a asp-controller="Order" asp-action="ListOrders" class="SeeOrder">Return back </a>
