--- a/Views/Order/ListOrders.cshtml
+++ b/Views/Order/ListOrders.cshtml
@@ -22,7 +22,7 @@
 </div>
 <div class="container text-center">
     <div class="row align-items-center">
-        <div class="col orderbox">
+        <div class="col orderbox orderInfoBox" >
                 <div class="order-info">
                     <h2>Confirmed Orders</h2>
                 </div>
@@ -39,7 +39,7 @@
                 </div>
             }
         </div>
-        <div class="col orderbox">
+            <div class="col orderbox orderInfoBox">
                 <div class="order-info">
                     <h2>Orders in Progress</h2>
                 </div>
@@ -56,7 +56,7 @@
                 </div>
             }
         </div>
-        <div class="col orderbox">
+            <div class="col orderbox orderInfoBox">
                 <div class="order-info">
                     <h2>Ready for Delivery</h2>
                 </div>
