--- a/Views/Order/HandleOrder.cshtml
+++ b/Views/Order/HandleOrder.cshtml
@@ -114,7 +114,7 @@
         </fieldset>
 
         <br />
-
+        <a asp-controller="Order" asp-action="ListOrders" class="SeeOrder2">Return back </a>
     </form>
 
 
@@ -124,4 +124,4 @@
 
 
 
-<a asp-controller="Order" asp-action="ListOrders" class="SeeOrder">Return back </a>
+
