--- a/wwwroot/css/IncomingOrder.css
+++ b/wwwroot/css/IncomingOrder.css
@@ -9,6 +9,13 @@
     margin-bottom: .5em;
     min-height: 200px;
     
+    
+}
+
+.orderInfoBox {
+    max-height: 500px;
+    overflow-y: auto;
+    min-height: 500px;
 }
 .order-info {
     width: 100%;
@@ -35,7 +42,9 @@
     background-color:cornflowerblue;
     color: white;
     border-radius: 5%;
+
 }
+
 
 .order-site {
     width: 100%;
