stavfel rättad paid

--- a/Views/Order/OrderHistory.cshtml
+++ b/Views/Order/OrderHistory.cshtml
@@ -48,7 +48,7 @@
                                 <th scope="col">Modelid</th>
                                 <th scope="col">Modelname</th>
                                 <th scope="col">Price</th>
-                                <th scope="col">Is Payed</th>
+                                <th scope="col">Is Paid</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Customerid</th>
                                 <th scope="col">Customer Name</th>
