--- a/Views/Order/ListOrders.cshtml
+++ b/Views/Order/ListOrders.cshtml
@@ -1,96 +1,103 @@
 ﻿@model List<Order>;
+
 <link rel="stylesheet" href="~/css/IncomingOrder.css">
+
 <div class="order-site">
-<div class="orderbox">
+  <div class="orderbox">
     <div class="order-info">
-        <h2>Orderrequests</h2>
+      <h2>Orderrequests</h2>
     </div>
-    @foreach(var Order in Model.Where(o=>o.Status.Equals("Pending") && !o.IsApproved))
+    @foreach (var Order in Model.Where(o => o.Status.Equals("Pending") && !o.IsApproved))
     {
-        <div class="order">
-                 @Order.OrderDate.ToString("yyyy-MM-dd")
+      <div class="order">
+        @Order.OrderDate.ToString("yyyy-MM-dd")
+        <p>Hats @Order.Hats.Count(); st</p>
+        <p>Ordersum: @Order.OrderSum sek</p>
+        <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
+        <br />
+        <a asp-action="ApproveOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Approve</a>
+        <a asp-action="DeclineOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Decline</a>
+
+
+      </div>
+    }
+  </div>
+  <div class="container text-center">
+    <div class="row align-items-center">
+      <div class="col orderbox orderInfoBox">
+        <div class="order-info">
+          <h2>Confirmed Orders</h2>
+        </div>
+        @foreach (var Order in Model.Where(o => o.Status.Equals("Confirmed")))
+        {
+          <div class="order">
+            @Order.OrderDate.ToString("yyyy-MM-dd")
             <p>Hats @Order.Hats.Count(); st</p>
             <p>Ordersum: @Order.OrderSum sek</p>
-                <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
-                <br />
-                <a asp-action="ApproveOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Approve</a>
-                <a asp-action="DeclineOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Decline</a>
-                
+            <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle
+              order</a>
+            <br />
+            <a asp-action="InProgress" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Mark as in
+              progress</a>
 
-        </div>
-    }
-</div>
-<div class="container text-center">
-    <div class="row align-items-center">
-        <div class="col orderbox orderInfoBox" >
-                <div class="order-info">
-                    <h2>Confirmed Orders</h2>
-                </div>
-            @foreach(var Order in Model.Where(o=>o.Status.Equals("Confirmed")))
-            {
-                <div class="order">
-                    @Order.OrderDate.ToString("yyyy-MM-dd")
-                    <p>Hats @Order.Hats.Count(); st</p>
-                    <p>Ordersum: @Order.OrderSum sek</p>
-                        <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
-                        <br />
-                    <a asp-action="InProgress" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Mark as in progress</a>
-
-                </div>
-            }
-        </div>
-            <div class="col orderbox orderInfoBox">
-                <div class="order-info">
-                    <h2>Orders in Progress</h2>
-                </div>
-           @foreach(var Order in Model.Where(o=>o.Status.Equals("InProgress")))
-            {
-                <div class="order">
-                    @Order.OrderDate.ToString("yyyy-MM-dd")
-                    <p>Hats: @Order.Hats.Count(); st</p>
-                    <p>Ordersum: @Order.OrderSum sek</p>
-                        <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
-                        <br />
-                        <a asp-action="ReadyForDelivery" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Ready for delivery</a>
-
-                </div>
-            }
-        </div>
-            <div class="col orderbox orderInfoBox">
-                <div class="order-info">
-                    <h2>Ready for Delivery</h2>
-                </div>
-            @foreach (var Order in Model.Where(o => o.Status.Equals("ReadyForDelivery")))
-            {
-                <div class="order">
-                    @Order.OrderDate.ToString("yyyy-MM-dd")
-                    <p>Hats: @Order.Hats.Count(); st</p>
-                    <p>Ordersum: @Order.OrderSum sek</p>
-                        <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
-                        <br />
-                        <a asp-action="Shipped" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Shipped</a>
-                </div>
-            }
-        </div>
-    </div>
-</div>
-<div class="orderbox">
+          </div>
+        }
+      </div>
+      <div class="col orderbox orderInfoBox">
         <div class="order-info">
-            <h2>Declined Orders to Handle</h2>
+          <h2>Orders in Progress</h2>
         </div>
+        @foreach (var Order in Model.Where(o => o.Status.Equals("InProgress")))
+        {
+          <div class="order">
+            @Order.OrderDate.ToString("yyyy-MM-dd")
+            <p>Hats: @Order.Hats.Count(); st</p>
+            <p>Ordersum: @Order.OrderSum sek</p>
+            <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle
+              order</a>
+            <br />
+            <a asp-action="ReadyForDelivery" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Ready for
+              delivery</a>
+
+          </div>
+        }
+      </div>
+      <div class="col orderbox orderInfoBox">
+        <div class="order-info">
+          <h2>Ready for Delivery</h2>
+        </div>
+        @foreach (var Order in Model.Where(o => o.Status.Equals("ReadyForDelivery")))
+        {
+          <div class="order">
+            @Order.OrderDate.ToString("yyyy-MM-dd")
+            <p>Hats: @Order.Hats.Count(); st</p>
+            <p>Ordersum: @Order.OrderSum sek</p>
+            <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle
+              order</a>
+            <br />
+            <a asp-action="Shipped" asp-controller="Order" asp-route-orderId="@Order.ID" class="links">Shipped</a>
+          </div>
+        }
+      </div>
+    </div>
+  </div>
+  <div class="orderbox">
+    <div class="order-info">
+      <h2>Declined Orders to Handle</h2>
+    </div>
     @foreach (var Order in Model.Where(o => o.Status.Equals("Declined")))
     {
-        <div class="order">
-            @Order.OrderDate.ToString("yyyy-MM-dd")
-            <p>Hats @Order.Hats.Count();</p>
-            <p>Ordersum: @Order.OrderSum sek</p>
-                <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
-                <br />
-                <a asp-action="Delete" asp-controller="Order" asp-route-orderId="@Order.ID" class="Remove">Delete order</a>
-                
-          
+      <div class="order">
+        @Order.OrderDate.ToString("yyyy-MM-dd")
+        <p>Hats @Order.Hats.Count();</p>
+        <p>Ordersum: @Order.OrderSum sek</p>
+        <a asp-action="HandleOrder" asp-controller="Order" asp-route-orderId="@Order.ID" class="SeeOrder">Handle order</a>
+        <br />
+        <a asp-action="Delete" asp-controller="Order" asp-route-orderId="@Order.ID" class="Remove">Delete order</a>
 
-        </div>
+
+
+      </div>
     }
-</div>
+  </div>
 </div>
