--- a/Views/Model/ModelInfo.cshtml
+++ b/Views/Model/ModelInfo.cshtml
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md mt-2">
+    <div class="col-md-4 mt-2">
       <img src="@ViewBag.Model.ImagePath" alt="Picture on specific hat" class="hat-image" style="max-width: 100%">
     </div>
     <div class="col-md mt-2">
