--- a/wwwroot/css/LogIn.css
+++ b/wwwroot/css/LogIn.css
@@ -15,6 +15,8 @@ img { max-width: 100% }
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
   /* Added margin-top for separation */
 }
 
