--- a/Views/Account/EditCustomer.cshtml
+++ b/Views/Account/EditCustomer.cshtml
@@ -3,73 +3,71 @@
 <h2 style="text-align: center;">EDIT CUSTOMERS</h2>
 <br />
 <div class="container">
-    <div class="row">
-        <div class="col-md-7">
-            <h2>Current material</h2>
-            <form method="post" asp-action="EditMaterial">
-                <div class="form-group">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col">Customer ID</th>
-                                <th scope="col">First name</th>
-                                <th scope="col">Last name</th>
-                                <th scope="col">Phonenumber</th>
-                                <th scope="col">Street address</th>
-                                <th scope="col">Zipcode</th>
-                                <th scope="col">City</th>
-                                <th scope="col">Country</th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var customer in ViewBag.Customers)
-                            {
-                                @if (!customer.ID.Equals(ViewBag.User.ID))
-                                {
-                                    <tr>
-                                        <td>@customer.ID</td>
-                                        <td>@customer.FirstName</td>
-                                        <td>@customer.LastName</td>
-                                        <td>@customer.PhoneNumber</td>
-                                        @if (customer.Address == null)
-                                        {
-                                            <td>No Address found</td>
-                                        }
-                                        else
-                                        {
-                                            <td>@customer.Address.StreetAddress</td>
-                                            <td>@customer.Address.ZipCode</td>
-                                            <td>@customer.Address.City</td>
-                                            <td>@customer.Address.Country</td>
-                                        }
-                                        <td>
-                                            <form method="post" asp-action="DeleteCustomer">
-                                                <input type="hidden" name="CustomerId" value="@customer.ID" />
-                                                <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
-                                            </form>
-                                        </td>
-                                        <td>
-                                            <form method="post" asp-action="EditCustomerInput">
-                                                <input type="hidden" name="CustomerId" value="@customer.ID" />
-                                                <button type="submit" class="btn btn-primary btn-sm">Edit</button>
-                                            </form>
-                                        </td>
+  <div class="row">
+    <div>
+      <h2>Current material</h2>
+      <form method="post" asp-action="EditMaterial">
+        <div class="form-group">
+          <table class="table table-striped table-responsive">
+            <thead>
+              <tr>
+                <th scope="col">First name</th>
+                <th scope="col">Last name</th>
+                <th scope="col">Phonenumber</th>
+                <th scope="col">Street address</th>
+                <th scope="col">Zipcode</th>
+                <th scope="col">City</th>
+                <th scope="col">Country</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var customer in ViewBag.Customers)
+              {
+                @if (!customer.ID.Equals(ViewBag.User.ID))
+                {
+                  <tr>
+                    <td>@customer.FirstName</td>
+                    <td>@customer.LastName</td>
+                    <td>@customer.PhoneNumber</td>
+                    @if (customer.Address == null)
+                    {
+                      <td>No Address found</td>
+                    }
+                    else
+                    {
+                      <td>@customer.Address.StreetAddress</td>
+                      <td>@customer.Address.ZipCode</td>
+                      <td>@customer.Address.City</td>
+                      <td>@customer.Address.Country</td>
+                    }
+                    <td>
+                      <form method="post" asp-action="DeleteCustomer">
+                        <input type="hidden" name="CustomerId" value="@customer.ID" />
+                        <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
+                      </form>
+                    </td>
+                    <td>
+                      <form method="post" asp-action="EditCustomerInput">
+                        <input type="hidden" name="CustomerId" value="@customer.ID" />
+                        <button type="submit" class="btn btn-primary btn-sm">Edit</button>
+                      </form>
+                    </td>
 
-                                    </tr>
+                  </tr>
 
-                                }
-                               
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </form>
+                }
+
+              }
+            </tbody>
+          </table>
         </div>
-       
-        
-        
+      </form>
     </div>
+
+
+
+  </div>
 </div>
